--- a/src/v5/app/app.component.html
+++ b/src/v5/app/app.component.html
@@ -1,4 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<ul class="menu">
+    <li><a href="#!/view1">view1</a></li>
+    <li><a href="#!/view2">view2</a></li>
+  </ul>
+<div ng-view></div>
+    
+      <div>Angular seed app: v<span app-version></span></div>
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
