--- a/src/v5/app/app.component.html
+++ b/src/v5/app/app.component.html
@@ -3,8 +3,10 @@
     <li><a href="/view1">view1</a></li>
     <li><a href="/view2">view2</a></li>
     <li><a routerLink="/demo">view3</a></li>
+    <li><a routerLink="/dummy">view4 (lazy loading)</a></li>
   </ul>
-<div ng-view></div>
+
 <router-outlet></router-outlet>
+<div ng-view></div>
     
  
