--- a/src/v5/app/app.component.html
+++ b/src/v5/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <ul class="menu">
-    <li><a href="/view1">view1</a></li>
-    <li><a href="/view2">view2</a></li>
+    <li><a href="/v1/view1">view1</a></li>
+    <li><a href="/v1/view2">view2</a></li>
     <li><a routerLink="/demo">view3</a></li>
     <li><a routerLink="/dummy">view4 (lazy loading)</a></li>
   </ul>
